--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         
         <link rel="icon" href="{% static 'img/icon.png' %}" type="image/x-icon">
         <!-- Bootstrap CSS v5.2.1 -->
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/estilos.css'%}">
     </head>
 
@@ -104,7 +104,7 @@
 
         <!-- JavaScript scripts --> 
         <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/909a90592e.js" crossorigin="anonymous"></script>
         <script src="{% static 'js/script.js'%}"></script>
 
