Se añade link en login para registar usuario

--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -38,6 +38,8 @@
 
             <button type="submit" class="btn"> Login</button>
         </form>
+
+        <a href="{% url 'users_app:register_user' %}">Registrar Usuario</a>
     </div>
 
 
