--- a/templates/usuarios/login.html
+++ b/templates/usuarios/login.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     
-    <div class="wrapper">
+    <div class="wrapper text-center">
         <form action="" method="POST">
             {%csrf_token%}
-            <img src="{% static 'img/Logotacomas.png'%}" alt="">
+            <img src="{% static 'img/Logotacomas.png'%}" alt="" class="d-flex justify-content-center">
             <h1>Bienvenido a Tacosoft</h1>
 
             {% if form.non_field_errors %}
@@ -39,7 +39,9 @@
             <button type="submit" class="btn"> Login</button>
         </form>
 
-        <a href="{% url 'users_app:register_user' %}">Registrar Usuario</a>
+        <div class="mt-3 row d-flex justify-content-center align-items-center">
+            <a href="{% url 'users_app:register_user' %}">Registrar Usuario</a>
+        </div>
     </div>
 
 
